<resources>
    <string name="app_name">LayoutsViews</string>
    <string name="login_page">Login Page</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="loginButton">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email:</string>
    <string name="register">Register</string>
</resources>