<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#804fc4"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="230sp"
        android:layout_margin="10sp"
        android:rowCount="5"
        android:columnCount="1"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="@string/login_page"
            android:textColor="@color/black"
            android:textSize="48sp" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_gravity="fill"
            android:gravity="center"
            android:layout_row="1"
            android:layout_column="0"
            android:ems="10"
            android:inputType="text"
            android:text="@string/login" />

        <TextView
            android:id="@+id/textView2"
            android:layout_gravity="fill"
            android:gravity="center"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp"  />

        <EditText
            android:id="@+id/editTextTextPassword5"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button2"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/loginButton" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>