<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent"
    android:background="#804fc4">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:layout_margin="10sp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView6"
                android:gravity="center"
                android:text="@string/login_page"
                android:textColor="@color/black"
                android:textSize="48sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="match_parent"
                android:ems="10"
                android:gravity="center"
                android:inputType="text"
                android:text="@string/login" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView7"
                android:gravity="center"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTextPassword2"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPassword" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button3"
                android:text="@string/loginButton" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>